--- a/web/index.html
+++ b/web/index.html
@@ -10,5 +10,6 @@
     <p>Hola mundo Git</p>
     <p>texto 1</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae sunt corrupti repellat modi iure expedita soluta quo exercitationem laboriosam ipsum laudantium, ducimus at atque, temporibus illo aliquam numquam dicta fugit.</p>
+    <p>Hola</p>
 </body>
 </html>
